# lightaero

./: .gitignore  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  deploy.yml  docs.yml
api/: index.html
contributing/: index.html
docs/: getting-started.md  index.md
docs/api/: index.md
docs/examples/: 3d-visualization.md
docs/theory/: aerodynamics.md  assumptions.md  atmosphere.md  index.md  structures.md
examples/3d-visualization/: index.html
getting-started/: index.html
scripts/: generate_docs_assets.py  test_geometry.py  test_solvers.py
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/api/: index.html
site/assets/javascripts/: bundle.79ae519e.min.js.map
site/contributing/: index.html
site/examples/3d-visualization/: index.html
site/getting-started/: index.html
site/search/: search_index.json
site/theory/: index.html
site/theory/aerodynamics/: index.html
site/theory/assumptions/: index.html
site/theory/atmosphere/: index.html
site/theory/structures/: index.html
src/lightaero/aerodynamics/: __init__.py  aeroelastic.py  aic.py  force.py  panel_mesh.py  solver.py
src/lightaero/atmosphere/: __init__.py  isa.py
src/lightaero/geometry/: __init__.py  airfoil.py  crm.py  dlrf4.py  dlrf6.py  ucrm.py  wing.py
src/lightaero/registry/: __init__.py  registry.py
src/lightaero/schemas/: types.py  validation.py
src/lightaero/structures/: __init__.py  beam.py  mass.py  (+1 more)
tests/phase1/: test_scaffolding.py
tests/phase11/: test_automation.py
tests/phase2/: test_packaging.py
tests/phase3/: test_ci.py
tests/phase4/: test_docs.py
tests/phase5/: test_deployment.py
tests/phase6/: check_audit_coverage.py
tests/phase7/: test_refactoring.py
tests/phase9/: test_guards.py
theory/: index.html
theory/aerodynamics/: index.html
theory/assumptions/: index.html
theory/atmosphere/: index.html
theory/structures/: index.html
